--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.5",
     "next": "^14.2.23",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-query": "^3.39.3",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
@@ -24,7 +26,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
