--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,12 +12,14 @@
     "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "chart.js": "^4.4.5",
+    "chartjs-plugin-zoom": "^2.2.0",
     "next": "^14.2.23",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-query": "^3.39.3",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
