Revert "existing page"
This reverts commit ea03c04bc79822bfbda617ecdd2f37f99affb0e3, reversing
changes made to 5f8aa156c5b39fef82e90442156b177f19aceabf.

--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,19 +12,14 @@
     "@react-google-maps/api": "^2.20.5",
     "axios": "^1.7.9",
     "chart.js": "^4.4.5",
-<<<<<<< HEAD
     "marked": "^15.0.6",
-=======
-    "chartjs-plugin-zoom": "^2.2.0",
->>>>>>> b15641a512c66358e0d6d4a07316dad1dc72f269
     "next": "^14.2.23",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-markdown": "^9.0.3",
     "react-query": "^3.39.3",
-    "react-toastify": "^10.0.6",
-    "recharts": "^2.15.1"
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
