--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-markdown": "^9.0.3",
     "react-query": "^3.39.3",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.15.1"
   },
   "devDependencies": {
     "@types/node": "^20",
